fixed about page footer overflow

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -790,10 +790,13 @@ footer {
   padding-bottom: 10px;
 }
 .team {
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #264D3E;
+  position: relative;
+  overflow: hidden;
 }
 .team img {
   width: 15%;
