--- a/public/less/about.less
+++ b/public/less/about.less
@@ -238,10 +238,13 @@
 }
 
 .team{
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #264D3E;
+  position: relative;
+  overflow: hidden;
   img {
     width: 15%;
     height: 15%;
@@ -267,6 +270,7 @@
     margin-left: 25%;
     margin-top: 15%;
     margin-bottom: 30%;
+    
 
     @media @tablet {
       width: 50%;
